<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favouriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favourite_nav"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_nav"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile_nav"/>
</menu>