<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FavouriteFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:gravity="center"
            android:textAlignment="center"
            android:text="Избранные питомцы" />

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/favourite_fragment_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            app:dsv_orientation="horizontal"
            tools:listitem="@layout/card_pet" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>